--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,55 @@
-version: "3.5"
 services:
 
   # we use kamailio 5.7.5 built from source code
   # kamailio has the ip 200.200.200.4
   # kamailio configuration file can be found here "/usr/local/etc/kamailio/kamailio.cfg"
-  kamailio_sip_proxy:
+  kamailio:
+    container_name: kamailio
     image: debian_11_kamailio:5.7.5
-    container_name: kamailio_sip_proxy
+    build:
+      context: ./dockerfiles/kamailio_5.7.5
     hostname: kamailio_sip_proxy
     volumes:
-      - ./kamailio_configuration/kamailio.cfg:/usr/local/etc/kamailio/kamailio.cfg
+      - ./kamailio_configuration/:/usr/local/etc/kamailio/
     networks:
       kamailio_PRACK_network:
         ipv4_address: 200.200.200.3
-    command: kamailio -DD -E -f kamailio.cfg
+    entrypoint: /usr/local/sbin/kamailio
+    command: -DD -dd -e -E -M 16 -m 8
 
   # the callee is a SIPp instance
   # UAS listening on  200.200.200.4:5060
-  the_callee:
+  callee:
+    container_name: callee
     image: debian-sipp:latest
-    container_name: the_callee
+    build:
+      context: ./dockerfiles/SIPp
     hostname: the_callee
     volumes:
-      - ./sipp_scenarios/uas.xml:/tools/sipp/sipp_scenarios/uas.xml
-    command: sh -c "sipp -aa -sf sipp_scenarios/uas.xml -i 200.200.200.4 -p 5060"
+      - ./sipp_scenarios/:/tools/sipp/sipp_scenarios/
+    command: sh -c "sipp -aa -sf /tools/sipp/sipp_scenarios/uas.xml -i 200.200.200.4 -p 5060"
     networks:
       kamailio_PRACK_network:
         ipv4_address: 200.200.200.4
-    depends_on:
-      - kamailio_sip_proxy
 
 
   # the caller is a SIPp instance
   # UAC listening on  200.200.200.2:5080
   # Command to send
   # sipp -aa -trace_err -sf sipp_scenarios/uac.xml -i 200.200.200.2 -p 5080 -s called_party 200.200.200.3:5060 -m   1
-  the_caller:
+  caller:
+    container_name: caller
     image: debian-sipp:latest
-    container_name: the_caller
+    build:
+      context: ./dockerfiles/SIPp
     hostname: the_caller
     volumes:
       - ./sipp_scenarios/uac.xml:/tools/sipp/sipp_scenarios/uac.xml
     stdin_open: true
     tty: true
-    depends_on:
-      - kamailio_sip_proxy
-      - the_callee
+#    depends_on:
+#      - kamailio
+#      - callee
     networks:
       kamailio_PRACK_network:
         ipv4_address: 200.200.200.2
